syntax = "proto3";

package gameplay_service;

message BuyFruitRequest {
    string userId = 1;
    string fruitId = 2;
    Position position = 3;
}
